--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "sequelize": "3.30.4",
     "sequelize-auto": "0.4.28",
     "serve-favicon": "~2.3.2",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.6"
   }
 }
